--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
- <meta name="description" content="Amanda is a front-end developer from Seattle, USA">
-    <title>About Amanda</title>
+ <meta name="description" content="Amanda is a front-end developer from Seattle, USA. Check out her projects and contact her for job inquires">
+    <title>About me -  Amanda</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
@@ -17,27 +17,26 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Amanda C.</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html" title="Homepage">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="about.html#contact" title="Contact Amanda Corey">Contact Me</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="about.html" title="About Amanda Corey">About Me</a>
-                    </li>
-            </div>
-    </nav>
+<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <div class="container">
+        <a class="navbar-brand" href="#">Amanda C.</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="/index.html" title="Homepage">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="/about.html" title="About Amanda Corey">About Me</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/about.html#contact" title="Contact Amanda Corey">Contact Me</a>
+                </li>
+        </div>
+</nav>
     <h1 class="text-center">About me</h1>
     <h3 class="text-center">Front-end developer from Seattle, America</h3>
     <div class="about-paragraphs">
@@ -50,13 +49,13 @@
     <div class="container">
         <div class="row">
             <div class="col-4">
-                <img src="images/yoga.png" alt="Yoga project" class="img-fluid rounded">
+                <img src="/images/yoga.png" alt="Yoga project" class="img-fluid rounded">
             </div>
             <div class="col-4">
-                <img src="images/weather.png" alt="weather project" class="img-fluid rounded">
+                <img src="/images/weather.png" alt="weather project" class="img-fluid rounded">
             </div>
             <div class="col-4">
-                <img src="images/yogurt.png" alt="yogurt project" class="img-fluid rounded">
+                <img src="/images/yogurt.png" alt="yogurt project" class="img-fluid rounded">
             </div>
         </div>
     </div>
