--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Amanda is a front-end developer based in Seattle, USA">
-    <title>Amanda Corey</title>
+    <title>Front-end developer - Amanda Corey</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
@@ -28,22 +28,23 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html" title="Homepage">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/index.html" title="Homepage">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html#contact" title="Contact Amanda Corey">Contact Me</a>
+                        <a class="nav-link" href="/about.html" title="About Amanda Corey">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html" title="About Amanda Corey">About Me</a>
+                        <a class="nav-link" href="/about.html#contact" title="Contact Amanda Corey">Contact Me</a>
                     </li>
+                   
             </div>
     </nav>
     <h2 class="text-center mt-5">👋 Hi I am</h2>
     <h1 class="text-center">Amanda</h1>
     <h3 class="text-center">🇺🇸 Front-end developer, based in Seattle</h3>
     <div class="navigation-links">
-        <a href="about.html#contact" title="Contact Amanda Corey" class="primary-link">Contact me</a>
-        <a href="about.html" title="About Amanda Corey" class="secondary-link">About me</a>
+        <a href="/about.html#contact" title="Contact Amanda Corey" class="primary-link">Contact me</a>
+        <a href="/about.html" title="About Amanda Corey" class="secondary-link">About me</a>
     </div>
     <div class="container">
         <div class="row mt-5">
@@ -60,7 +61,7 @@
                     explicabo eum dolore.
                 </p>
                 <div class="mt-5">
-                    <a href="#" class="primary-link" title="Yoga project">Launch App</a>
+                    <a href="#" class="primary-link" title="Yoga project">Launch Yoga App</a>
                 </div>
             </div>
         </div>
@@ -74,15 +75,15 @@
                 </p>
             </div>
             <div class="col-6">
-                <img src="images/weather.png" alt="Weather project" class="img-fluid rounded">
+                <img src="/images/weather.png" alt="Weather project" class="img-fluid rounded">
             </div>
             <div class="mt-5">
-                <a href="#" class="primary-link" title="Weather project">Launch App</a>
+                <a href="#" class="primary-link" title="Weather project">Launch Weather App</a>
             </div>
         </div>
         <div class="row mt-5">
             <div class="col-6">
-                <img src="images/yogurt.png" alt="Yogurt project" class="img-fluid rounded">
+                <img src="/images/yogurt.png" alt="Yogurt project" class="img-fluid rounded">
             </div>
             <div class="col-6">
                 <h2 class="mb-3">
@@ -94,7 +95,7 @@
                     explicabo eum dolore.
                 </p>
                 <div class="mt-5">
-                    <a href="#" class="primary-link" title="Yogurt project">Launch App</a>
+                    <a href="#" class="primary-link" title="Yogurt project">Launch Yogurt App</a>
                 </div>
             </div>
         </div>
