--- a/about.html
+++ b/about.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
- <meta name="description" content="Amanda is a front-end developer from Seattle, USA. Check out her projects and contact her for job inquires">
     <title>About me -  Amanda</title>
+    <meta name="description"
+        content="Amanda is a front-end developer from Seattle, USA. Check out her projects and contact her for job inquires">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
@@ -59,10 +60,12 @@
             </div>
         </div>
     </div>
-    <div id="contact" class="mt-5 text-center">
+<footer>
+    <div id="contact" class="mt-5 mb-5 text-center">
         <h2>📮 Contact Amanda</h2>
         <a href="mailto:amjcorey@gmail.com"class="email-link" title="Email contact" > amjcorey@gmail.com </a>
     </div>
+</footer>
 </body>
 
 </html>
