--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Amanda is a front-end developer based in Seattle, USA">
+    <meta name="description" content="Amanda is a front-end developer from Seattle, USA. Check out her projects and contact her for job inquires">
     <title>Front-end developer - Amanda Corey</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous" />
@@ -19,7 +19,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Amanda C.</a>
+            <a class="navbar-brand" href="#"> Amanda C.</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -36,7 +36,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/about.html#contact" title="Contact Amanda Corey">Contact Me</a>
                     </li>
-                   
             </div>
     </nav>
     <h2 class="text-center mt-5">👋 Hi I am</h2>
@@ -48,10 +47,10 @@
     </div>
     <div class="container">
         <div class="row mt-5">
-            <div class="col-6">
+            <div class="col-sm-6">
                 <img src="images/yoga.png" alt="Yoga project" class="img-fluid rounded">
             </div>
-            <div class="col-6">
+            <div class="col-sm-6">
                 <h2 class="mb-3">
                     Yoga App
                 </h2>
@@ -66,7 +65,7 @@
             </div>
         </div>
         <div class="row mt-5">
-            <div class="col-6">
+            <div class="col-sm-6">
                 <h2 class="mb-3">Weather App</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione
@@ -74,7 +73,7 @@
                     explicabo eum dolore.
                 </p>
             </div>
-            <div class="col-6">
+            <div class="col-sm-6">
                 <img src="/images/weather.png" alt="Weather project" class="img-fluid rounded">
             </div>
             <div class="mt-5">
@@ -82,10 +81,10 @@
             </div>
         </div>
         <div class="row mt-5">
-            <div class="col-6">
+            <div class="col-sm-6">
                 <img src="/images/yogurt.png" alt="Yogurt project" class="img-fluid rounded">
             </div>
-            <div class="col-6">
+            <div class="col-sm-6">
                 <h2 class="mb-3">
                     Yogurt App
                 </h2>
